--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@headlessui/react": "^1.6.0",
     "@heroicons/react": "^1.0.6",
     "autoprefixer": "^10.4.5",
+    "axios": "^0.27.1",
+    "date-fns": "^2.28.0",
     "next": "12.1.5",
     "postcss": "^8.4.12",
     "react": "17.0.0",
