--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "autoprefixer": "^10.4.5",
     "axios": "^0.27.1",
     "date-fns": "^2.28.0",
+    "ethers": "^5.6.4",
     "next": "12.1.5",
     "postcss": "^8.4.12",
     "react": "17.0.0",
