--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@headlessui/react": "^1.6.0",
     "@heroicons/react": "^1.0.6",
+    "@polkadot/api": "^8.2.1",
+    "@polkadot/extension-dapp": "^0.43.1",
     "autoprefixer": "^10.4.5",
     "axios": "^0.27.1",
     "date-fns": "^2.28.0",
