--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "next": "12.1.5",
     "postcss": "^8.4.12",
     "react": "17.0.0",
+    "react-datepicker": "^4.7.0",
     "react-dom": "17.0.0",
     "react-hook-form": "^7.30.0",
     "tailwindcss": "^3.0.24"
@@ -27,6 +28,7 @@
   "devDependencies": {
     "@types/node": "17.0.26",
     "@types/react": "^18.0.7",
+    "@types/react-datepicker": "^4.4.1",
     "@types/react-dom": "^18.0.0",
     "eslint": "8.14.0",
     "eslint-config-next": "12.1.5",
